--- a/manual/latex/manual.bib
+++ b/manual/latex/manual.bib
@@ -697,3 +697,35 @@ archivePrefix = "arXiv",
   pages={1225--1233},
   year={2015}
 }
+
+
+@article{DBLP:journals/ipm/Turtle1995,
+  author    = {Howard R. Turtle and
+               James Flood},
+  title     = {Query Evaluation: Strategies and Optimizations},
+  journal   = {Inf. Process. Manage.},
+  volume    = {31},
+  number    = {6},
+  pages     = {831--850},
+  year      = {1995},
+  url       = {https://doi.org/10.1016/0306-4573(95)00020-H},
+  doi       = {10.1016/0306-4573(95)00020-H},
+  timestamp = {Thu, 18 May 2017 09:54:50 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/ipm/TurtleF95},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@book{DBLP:books/daglib/0031897,
+  author    = {Stefan B{\"{u}}ttcher and
+               Charles L. A. Clarke and
+               Gordon V. Cormack},
+  title     = {Information Retrieval - Implementing and Evaluating Search Engines},
+  publisher = {{MIT} Press},
+  year      = {2010},
+  url       = {http://mitpress.mit.edu/books/information-retrieval},
+  isbn      = {978-0-262-02651-2},
+  timestamp = {Sun, 06 Oct 2013 17:17:13 +0200},
+  biburl    = {https://dblp.org/rec/bib/books/daglib/0031897},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
