--- a/python_bindings/notebooks/search_generic_sparse_jaccard.ipynb
+++ b/python_bindings/notebooks/search_generic_sparse_jaccard.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy \n",
@@ -20,9 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Just a function to read sparse data\n",
@@ -75,9 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a held-out query data set\n",
@@ -104,9 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# For each entry in the sparse matrix, extract a list of IDs and\n",
@@ -125,9 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_matrix_str = matrToStrArray(data_matrix)\n",
@@ -137,9 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set index parameters\n",
@@ -154,9 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of neighbors \n",
@@ -195,8 +181,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index-time parameters {'post': 0, 'efConstruction': 100, 'M': 30, 'indexThreadQty': 4}\n",
-      "Indexing time = 15.290068\n"
+      "Index-time parameters {'M': 30, 'indexThreadQty': 4, 'efConstruction': 100, 'post': 0}\n",
+      "Indexing time = 5.325021\n"
      ]
     }
    ],
@@ -239,7 +225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN time total=2.595220 (sec), per query=0.005190 (sec), per query adjusted for thread number=0.020762 (sec)\n"
+      "kNN time total=0.601650 (sec), per query=0.001203 (sec), per query adjusted for thread number=0.004813 (sec)\n"
      ]
     }
    ],
@@ -265,7 +251,7 @@
      "output_type": "stream",
      "text": [
       "Computing gold-standard data\n",
-      "brute-force kNN time total=45.190543 (sec), per query=0.090381 (sec)\n"
+      "brute-force kNN time total=14.332985 (sec), per query=0.028666 (sec)\n"
      ]
     }
    ],
@@ -309,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.957420\n"
+      "kNN recall 0.953200\n"
      ]
     }
    ],
@@ -327,21 +313,17 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Save a meta index\n",
-    "index.saveIndex('sparse_jaccard_index.bin')"
+    "# Save a meta index and data\n",
+    "index.saveIndex('sparse_jaccard_index.bin', save_data=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Re-intitialize the library, specify the space, the type of the data and add data points \n",
@@ -353,38 +335,15 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4500"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# For non-optimized indices we need to re-add data points\n",
-    "newIndex.addDataPointBatch(data_matrix_str) "
+    "# Re-load the index and the data\n",
+    "newIndex.loadIndex('sparse_jaccard_index.bin', load_data=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Re-load the index and re-run queries\n",
-    "newIndex.loadIndex('sparse_jaccard_index.bin')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +351,7 @@
      "output_type": "stream",
      "text": [
       "Setting query-time parameters {'efSearch': 100}\n",
-      "kNN time total=1.291015 (sec), per query=0.002582 (sec), per query adjusted for thread number=0.010328 (sec)\n"
+      "kNN time total=0.612867 (sec), per query=0.001226 (sec), per query adjusted for thread number=0.004903 (sec)\n"
      ]
     }
    ],
@@ -411,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -420,7 +379,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.957420\n"
+      "kNN recall 0.953200\n"
      ]
     }
    ],
@@ -452,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
