--- a/python_bindings/notebooks/search_sift_uint8.ipynb
+++ b/python_bindings/notebooks/search_sift_uint8.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy \n",
@@ -19,10 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Just read the data\n",
@@ -31,10 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a held-out query data set\n",
@@ -43,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,10 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set index parameters\n",
@@ -79,10 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of neighbors \n",
@@ -91,10 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Space name should correspond to the space name \n",
@@ -104,10 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Intitialize the library, specify the space, the type of the vector and add data points \n",
@@ -120,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +115,7 @@
        "9000"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,15 +126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index-time parameters {'M': 15, 'skip_optimized_index': 1, 'efConstruction': 100, 'post': 0, 'indexThreadQty': 4}\n",
-      "Indexing time = 0.168367\n"
+      "Index-time parameters {'M': 15, 'indexThreadQty': 4, 'efConstruction': 100, 'post': 0, 'skip_optimized_index': 1}\n",
+      "Indexing time = 0.164428\n"
      ]
     }
    ],
@@ -163,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -184,14 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN time total=0.027784 (sec), per query=0.000028 (sec), per query adjusted for thread number=0.000111 (sec)\n"
+      "kNN time total=0.026479 (sec), per query=0.000026 (sec), per query adjusted for thread number=0.000106 (sec)\n"
      ]
     }
    ],
@@ -207,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -215,8 +201,8 @@
      "output_type": "stream",
      "text": [
       "Computing gold-standard data\n",
-      "Brute-force preparation time 0.001349\n",
-      "brute-force kNN time total=0.235281 (sec), per query=0.000235 (sec)\n"
+      "Brute-force preparation time 0.001164\n",
+      "brute-force kNN time total=0.270002 (sec), per query=0.000270 (sec)\n"
      ]
     }
    ],
@@ -240,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -249,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.990110\n"
+      "kNN recall 0.990770\n"
      ]
     }
    ],
@@ -266,22 +252,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Save a meta index\n",
-    "index.saveIndex('dense_index_nonoptim.bin')"
+    "# Save a meta index and the data\n",
+    "index.saveIndex('dense_index_nonoptim.bin', save_data=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Re-intitialize the library, specify the space, the type of the vector.\n",
@@ -293,40 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9000"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# For non-optimized indices or methods different from HNSW we DO need to re-add data points\n",
-    "newIndex.addDataPointBatch(data_matrix.astype(numpy.uint8)) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "# Re-load the index and re-run queries\n",
-    "newIndex.loadIndex('dense_index_nonoptim.bin')"
+    "newIndex.loadIndex('dense_index_nonoptim.bin', load_data=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +293,7 @@
      "output_type": "stream",
      "text": [
       "Setting query-time parameters {'efSearch': 100}\n",
-      "kNN time total=0.021776 (sec), per query=0.000022 (sec), per query adjusted for thread number=0.000087 (sec)\n"
+      "kNN time total=0.023836 (sec), per query=0.000024 (sec), per query adjusted for thread number=0.000095 (sec)\n"
      ]
     }
    ],
@@ -353,14 +312,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.990110\n"
+      "kNN recall 0.990770\n"
      ]
     }
    ],
@@ -392,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
