--- a/python_bindings/notebooks/search_sparse_cosine.ipynb
+++ b/python_bindings/notebooks/search_sparse_cosine.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy \n",
@@ -21,9 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Just a function to read sparse data\n",
@@ -76,9 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a held-out query data set\n",
@@ -105,9 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set index parameters\n",
@@ -122,9 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of neighbors \n",
@@ -162,8 +152,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index-time parameters {'efConstruction': 100, 'indexThreadQty': 4, 'M': 30, 'post': 0}\n",
-      "Indexing time = 7.880086\n"
+      "Index-time parameters {'M': 30, 'indexThreadQty': 4, 'efConstruction': 100, 'post': 0}\n",
+      "Indexing time = 9.202667\n"
      ]
     }
    ],
@@ -206,7 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN time total=0.895622 (sec), per query=0.001791 (sec), per query adjusted for thread number=0.007165 (sec)\n"
+      "kNN time total=1.021121 (sec), per query=0.002042 (sec), per query adjusted for thread number=0.008169 (sec)\n"
      ]
     }
    ],
@@ -222,46 +212,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([3286, 1842, 1100, 3986, 1306,  738, 1610, 2314, 3452, 3857, 2502,\n",
-       "        3318, 2101,  342, 1283, 3996, 1372, 4143, 4351, 4391, 2830,  597,\n",
-       "        2909, 2725, 3166, 2126,  470, 1853, 1179,  846, 2945, 3169,  663,\n",
-       "        4159,  152, 4493, 3933, 1722, 3328, 2549, 3026, 1555, 4121, 3301,\n",
-       "        1544,   80, 3051, 3021, 3476,  285, 3237, 4229, 1717, 3296, 1751,\n",
-       "        1580,  276,  414, 1429, 3521, 1047, 3589, 2594,  135, 2630, 1888,\n",
-       "        3716,   77, 2084, 2672, 1382, 3673, 3410,  346,  178, 2669, 3084,\n",
-       "        4451, 1326, 2252,  352,  857, 3436, 2728, 1492, 4434, 4481, 2608,\n",
-       "        3036, 3261,  776, 1728, 3002,  639,  207, 3524, 3660, 1299, 2155,\n",
-       "         621], dtype=int32),\n",
-       " array([0.8992085 , 0.91679084, 0.92188805, 0.92216325, 0.9252443 ,\n",
-       "        0.92593366, 0.92699254, 0.9270664 , 0.9273616 , 0.92750293,\n",
-       "        0.92814606, 0.92821515, 0.9283294 , 0.9285394 , 0.9288384 ,\n",
-       "        0.9300575 , 0.9302731 , 0.9303532 , 0.9307519 , 0.9307837 ,\n",
-       "        0.9312843 , 0.93236256, 0.9334375 , 0.9341124 , 0.9342348 ,\n",
-       "        0.93441284, 0.9352284 , 0.9355068 , 0.93568337, 0.93570966,\n",
-       "        0.93624324, 0.9366741 , 0.9367511 , 0.9369517 , 0.937425  ,\n",
-       "        0.9375497 , 0.93755674, 0.9382414 , 0.9383088 , 0.9385568 ,\n",
-       "        0.9392182 , 0.9395664 , 0.93977386, 0.9400221 , 0.9401452 ,\n",
-       "        0.94024456, 0.9404075 , 0.94044054, 0.94111145, 0.9413601 ,\n",
-       "        0.94136894, 0.9414181 , 0.9415044 , 0.94155735, 0.9416793 ,\n",
-       "        0.94186294, 0.9419466 , 0.9420507 , 0.942109  , 0.9422395 ,\n",
-       "        0.94345766, 0.9439351 , 0.9448485 , 0.94510096, 0.94514424,\n",
-       "        0.9454838 , 0.9455471 , 0.9455797 , 0.9455871 , 0.9459824 ,\n",
-       "        0.94622993, 0.9464909 , 0.94653654, 0.9465798 , 0.94671726,\n",
-       "        0.9467379 , 0.9468312 , 0.9469833 , 0.94807124, 0.9482827 ,\n",
-       "        0.9483958 , 0.94864804, 0.9490715 , 0.94914687, 0.9492137 ,\n",
-       "        0.94924515, 0.94926417, 0.949486  , 0.95013225, 0.9503755 ,\n",
-       "        0.950492  , 0.9505498 , 0.9505967 , 0.95077056, 0.9507993 ,\n",
-       "        0.950863  , 0.9509655 , 0.95128053, 0.9514849 , 0.95162797],\n",
+       "(array([   3, 2302, 2324, 2829,  836, 2521, 4276, 1075, 3219, 1804, 3329,\n",
+       "         555, 2714, 4470, 2264, 1774, 4087, 3945, 3730, 1070,  665, 3762,\n",
+       "        2347,  392, 2336, 1347, 3745,  108, 2922, 3663, 3424, 3320, 1292,\n",
+       "        1982, 3984, 1246, 3537, 2215, 3356, 3569,   12, 4433,  449,  401,\n",
+       "        3926,  132, 1153,   31,  941,  125, 1310,  769,  450,  743, 2170,\n",
+       "        3838, 4285, 2429,  518,  114, 3416,  263, 1716, 2200, 2353, 3120,\n",
+       "         255, 2253,  111, 1717, 2193, 4212, 4389, 1413, 4052,  709, 4024,\n",
+       "        4219, 1370, 1293, 4439,  452, 2544, 2311, 3068, 2636,  978, 3355,\n",
+       "        1810, 1747,  172,  152, 1417,  748, 2949, 3630, 2599, 3511, 4035,\n",
+       "        3211], dtype=int32),\n",
+       " array([0.6513385 , 0.7716905 , 0.80642194, 0.8168692 , 0.84857154,\n",
+       "        0.8595936 , 0.8656192 , 0.87085605, 0.8720833 , 0.87907964,\n",
+       "        0.8833531 , 0.8887931 , 0.90145725, 0.9019042 , 0.91259426,\n",
+       "        0.91409534, 0.914767  , 0.91586804, 0.91947174, 0.92219555,\n",
+       "        0.92302996, 0.9237418 , 0.92714274, 0.92908084, 0.9296933 ,\n",
+       "        0.92977536, 0.9310417 , 0.9319176 , 0.93203944, 0.9324098 ,\n",
+       "        0.93279576, 0.9343813 , 0.9344098 , 0.93464214, 0.9348885 ,\n",
+       "        0.9350232 , 0.935071  , 0.93566436, 0.93568826, 0.9365221 ,\n",
+       "        0.9374957 , 0.93804055, 0.93831414, 0.93836594, 0.93862057,\n",
+       "        0.93942326, 0.94010866, 0.94034004, 0.94087166, 0.9409894 ,\n",
+       "        0.941335  , 0.942135  , 0.94239676, 0.94249994, 0.942562  ,\n",
+       "        0.94264925, 0.94272506, 0.94278336, 0.9430402 , 0.94306934,\n",
+       "        0.9437921 , 0.94402224, 0.94407684, 0.9440973 , 0.94457656,\n",
+       "        0.94477165, 0.94484353, 0.9448699 , 0.94497496, 0.94499063,\n",
+       "        0.9451258 , 0.945632  , 0.9458055 , 0.9458497 , 0.94596535,\n",
+       "        0.9461746 , 0.94627297, 0.9463461 , 0.9463593 , 0.94636005,\n",
+       "        0.9463887 , 0.94648194, 0.9465077 , 0.9465609 , 0.94657856,\n",
+       "        0.94714284, 0.9477545 , 0.9478362 , 0.9481366 , 0.9485545 ,\n",
+       "        0.9486929 , 0.94905704, 0.94949985, 0.94961494, 0.949656  ,\n",
+       "        0.9497073 , 0.9497331 , 0.9497722 , 0.95005053, 0.95027965],\n",
        "       dtype=float32))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -280,8 +270,8 @@
      "output_type": "stream",
      "text": [
       "Computing gold-standard data\n",
-      "Brute-force preparation time 0.018111\n",
-      "brute-force kNN time total=0.655375 (sec), per query=0.001311 (sec)\n"
+      "Brute-force preparation time 0.020844\n",
+      "brute-force kNN time total=0.643384 (sec), per query=0.001287 (sec)\n"
      ]
     }
    ],
@@ -305,14 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.970280\n"
+      "kNN recall 0.970600\n"
      ]
     }
    ],
@@ -329,22 +319,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Save a meta index\n",
-    "index.saveIndex('sparse_index.bin')"
+    "# Save a meta index and the data\n",
+    "index.saveIndex('sparse_index.bin', save_data=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Re-intitialize the library, specify the space, the type of the vector\n",
@@ -353,35 +339,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4500"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# For non-optimized indices we need to re-add data points\n",
-    "newIndex.addDataPointBatch(data_matrix) "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Re-load the index and re-run queries\n",
-    "newIndex.loadIndex('sparse_index.bin')"
+    "# Re-load the index and the data\n",
+    "newIndex.loadIndex('sparse_index.bin', load_data=True)"
    ]
   },
   {
@@ -394,7 +357,7 @@
      "output_type": "stream",
      "text": [
       "Setting query-time parameters {'efSearch': 100}\n",
-      "kNN time total=1.224607 (sec), per query=0.002449 (sec), per query adjusted for thread number=0.009797 (sec)\n"
+      "kNN time total=0.938577 (sec), per query=0.001877 (sec), per query adjusted for thread number=0.007509 (sec)\n"
      ]
     }
    ],
@@ -420,7 +383,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.970280\n"
+      "kNN recall 0.970600\n"
      ]
     }
    ],
@@ -452,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
