--- a/python_bindings/notebooks/search_vector_dense_kldiv.ipynb
+++ b/python_bindings/notebooks/search_vector_dense_kldiv.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy \n",
@@ -19,10 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Just read the data\n",
@@ -31,10 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a held-out query data set\n",
@@ -43,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,10 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set index parameters\n",
@@ -77,10 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of neighbors \n",
@@ -89,10 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Space name should correspond to the space name \n",
@@ -102,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +99,7 @@
        "9000"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,15 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index-time parameters {}\n",
-      "Indexing time = 0.049721\n"
+      "Index-time parameters {'NN': 15, 'indexThreadQty': 4, 'efConstruction': 100}\n",
+      "Indexing time = 0.210426\n"
      ]
     }
    ],
@@ -147,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -168,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN time total=0.029160 (sec), per query=0.000029 (sec), per query adjusted for thread number=0.000117 (sec)\n"
+      "kNN time total=0.044675 (sec), per query=0.000045 (sec), per query adjusted for thread number=0.000179 (sec)\n"
      ]
     }
    ],
@@ -191,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -201,7 +189,7 @@
      "output_type": "stream",
      "text": [
       "Computing gold-standard data\n",
-      "brute-force kNN time total=19.034724 (sec), per query=0.019035 (sec)\n"
+      "brute-force kNN time total=11.479818 (sec), per query=0.011480 (sec)\n"
      ]
     }
    ],
@@ -233,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -242,7 +230,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.996040\n"
+      "kNN recall 0.999300\n"
      ]
     }
    ],
@@ -259,20 +247,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save a meta index\n",
-    "index.saveIndex('dense_index_kldiv.txt')"
+    "# Save a meta index and the data\n",
+    "index.saveIndex('dense_index_kldiv.txt', save_data=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Re-intitialize the library, specify the space, the type of the vector.\n",
@@ -281,38 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9000"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# For non-optimized indices or methods different from HNSW we DO need to re-add data points\n",
-    "newIndex.addDataPointBatch(data_matrix) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Re-load the index and re-run queries\n",
-    "newIndex.loadIndex('dense_index_kldiv.txt')"
+    "# Re-load the index and the data\n",
+    "newIndex.loadIndex('dense_index_kldiv.txt', load_data=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +285,7 @@
      "output_type": "stream",
      "text": [
       "Setting query-time parameters {'efSearch': 100}\n",
-      "kNN time total=0.033697 (sec), per query=0.000034 (sec), per query adjusted for thread number=0.000135 (sec)\n"
+      "kNN time total=0.031019 (sec), per query=0.000031 (sec), per query adjusted for thread number=0.000124 (sec)\n"
      ]
     }
    ],
@@ -339,14 +304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.996160\n"
+      "kNN recall 0.999300\n"
      ]
     }
    ],
@@ -378,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
