--- a/python_bindings/notebooks/search_vector_dense_optim.ipynb
+++ b/python_bindings/notebooks/search_vector_dense_optim.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy \n",
@@ -20,9 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Just read the data\n",
@@ -32,9 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a held-out query data set\n",
@@ -67,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index-time parameters {'efConstruction': 100, 'indexThreadQty': 4, 'M': 15, 'post': 0}\n"
+      "Index-time parameters {'M': 15, 'indexThreadQty': 4, 'efConstruction': 100, 'post': 0}\n"
      ]
     }
    ],
@@ -85,9 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of neighbors \n",
@@ -97,9 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Space name should correspond to the space name \n",
@@ -138,8 +128,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index-time parameters {'efConstruction': 100, 'indexThreadQty': 4, 'M': 15}\n",
-      "Indexing time = 0.298415\n"
+      "Index-time parameters {'M': 15, 'indexThreadQty': 4, 'efConstruction': 100}\n",
+      "Indexing time = 0.246434\n"
      ]
     }
    ],
@@ -183,7 +173,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN time total=0.025963 (sec), per query=0.000026 (sec), per query adjusted for thread number=0.000104 (sec)\n"
+      "kNN time total=0.026962 (sec), per query=0.000027 (sec), per query adjusted for thread number=0.000108 (sec)\n"
      ]
     }
    ],
@@ -207,8 +197,8 @@
      "output_type": "stream",
      "text": [
       "Computing gold-standard data\n",
-      "Brute-force preparation time 0.001208\n",
-      "brute-force kNN time total=0.438362 (sec), per query=0.000438 (sec)\n"
+      "Brute-force preparation time 0.001275\n",
+      "brute-force kNN time total=0.242228 (sec), per query=0.000242 (sec)\n"
      ]
     }
    ],
@@ -239,7 +229,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.991740\n"
+      "kNN recall 0.993460\n"
      ]
     }
    ],
@@ -257,21 +247,17 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Save a meta index\n",
-    "index.saveIndex('dense_index_optim.bin')"
+    "# Save a meta index, but no data!\n",
+    "index.saveIndex('dense_index_optim.bin', save_data=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Re-intitialize the library, specify the space, the type of the vector.\n",
@@ -284,9 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Re-load the index and re-run queries\n",
@@ -303,7 +287,7 @@
      "output_type": "stream",
      "text": [
       "Setting query-time parameters {'efSearch': 100}\n",
-      "kNN time total=0.022647 (sec), per query=0.000023 (sec), per query adjusted for thread number=0.000091 (sec)\n"
+      "kNN time total=0.026182 (sec), per query=0.000026 (sec), per query adjusted for thread number=0.000105 (sec)\n"
      ]
     }
    ],
@@ -329,7 +313,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.991740\n"
+      "kNN recall 0.993460\n"
      ]
     }
    ],
@@ -361,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
