--- a/python_bindings/notebooks/search_vector_dense_nonoptim.ipynb
+++ b/python_bindings/notebooks/search_vector_dense_nonoptim.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy \n",
@@ -20,9 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Just read the data\n",
@@ -32,9 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a held-out query data set\n",
@@ -78,9 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Number of neighbors \n",
@@ -90,9 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Space name should correspond to the space name \n",
@@ -131,8 +121,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index-time parameters {'M': 15, 'indexThreadQty': 4, 'efConstruction': 100, 'skip_optimized_index': 1, 'post': 0}\n",
-      "Indexing time = 0.291947\n"
+      "Index-time parameters {'M': 15, 'indexThreadQty': 4, 'efConstruction': 100, 'post': 0, 'skip_optimized_index': 1}\n",
+      "Indexing time = 0.273223\n"
      ]
     }
    ],
@@ -175,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN time total=0.037669 (sec), per query=0.000038 (sec), per query adjusted for thread number=0.000151 (sec)\n"
+      "kNN time total=0.032596 (sec), per query=0.000033 (sec), per query adjusted for thread number=0.000130 (sec)\n"
      ]
     }
    ],
@@ -199,8 +189,8 @@
      "output_type": "stream",
      "text": [
       "Computing gold-standard data\n",
-      "Brute-force preparation time 0.001139\n",
-      "brute-force kNN time total=0.319399 (sec), per query=0.000319 (sec)\n"
+      "Brute-force preparation time 0.001191\n",
+      "brute-force kNN time total=0.287856 (sec), per query=0.000288 (sec)\n"
      ]
     }
    ],
@@ -233,7 +223,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.993040\n"
+      "kNN recall 0.992350\n"
      ]
     }
    ],
@@ -251,13 +241,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Save a meta index\n",
-    "index.saveIndex('dense_index_nonoptim.bin')"
+    "# Save a meta index and the data\n",
+    "index.saveIndex('dense_index_nonoptim.bin', save_data=True)"
    ]
   },
   {
@@ -274,38 +262,15 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9000"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# For non-optimized indices or methods different from HNSW we DO need to re-add data points\n",
-    "newIndex.addDataPointBatch(data_matrix) "
+    "# Re-load the index and the data\n",
+    "newIndex.loadIndex('dense_index_nonoptim.bin', load_data=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Re-load the index and re-run queries\n",
-    "newIndex.loadIndex('dense_index_nonoptim.bin')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +278,7 @@
      "output_type": "stream",
      "text": [
       "Setting query-time parameters {'efSearch': 100}\n",
-      "kNN time total=0.031991 (sec), per query=0.000032 (sec), per query adjusted for thread number=0.000128 (sec)\n"
+      "kNN time total=0.032446 (sec), per query=0.000032 (sec), per query adjusted for thread number=0.000130 (sec)\n"
      ]
     }
    ],
@@ -332,14 +297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN recall 0.993040\n"
+      "kNN recall 0.992350\n"
      ]
     }
    ],
@@ -357,9 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -369,6 +332,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
